--- a/drawing/draw.html
+++ b/drawing/draw.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Drawing</title>
+		<meta charset="UTF-8">
 		<script>
 		    var ctx;
 			var lineColor;//Color linea de los arcos
