ya se leen correctamente los objetos JSON, lo que no sé es como leerlos de la base de datos

--- a/drawing/drawRX.html
+++ b/drawing/drawRX.html
@@ -504,8 +504,7 @@
                     url: url,
                     dataType: "json",
                     contentType: "application/json; charset=utf-8",
-                    type: "POST",
-                    success: alert("sirvio el request")
+                    type: "POST"
                 });
             };
 
