--- a/drawing/index.html
+++ b/drawing/index.html
@@ -533,9 +533,8 @@
                         dataType: "json",
                         contentType: "application/json; charset=utf-8",
                         type: "POST",
-                        success: function (response) {
-                            var x = JSON.parse(response);
-                            if (x.path !== []) {
+                        success: function (x) {
+                            if (!x.path.length === 0) {
                                 activateHigh(x);
                             } else {
                                 $('#modal').modal({
